--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "15.0.3",
     "pdfjs-dist": "^3.4.120",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "swiper": "^11.1.15"
   },
   "devDependencies": {
     "@types/aos": "^3.0.7",
