--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "aos": "^2.3.4",
     "next": "15.0.3",
     "pdfjs-dist": "^3.4.120",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
-    "swiper": "^11.1.15"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "swiper": "^11.1.15",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/aos": "^3.0.7",
