--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "lucide-react": "^0.475.0",
     "next": "15.0.3",
     "pdfjs-dist": "^3.4.120",
     "react": "^18.3.1",
