--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@playwright/test": "^1.50.1",
     "aos": "^2.3.4",
     "lucide-react": "^0.475.0",
     "next": "15.0.3",
