--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@playwright/test": "^1.50.1",
     "aos": "^2.3.4",
+    "chrome-aws-lambda": "^10.1.0",
     "lucide-react": "^0.475.0",
     "next": "15.0.3",
     "pdfjs-dist": "^3.4.120",
+    "playwright-aws-lambda": "^0.11.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "swiper": "^11.1.15",
