--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "@tailwindcss/postcss": "^4",
+    "tailwindcss": "^4",
     "typescript": "^5"
   }
 }
