--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@playwright/test": "^1.50.1",
+    "@radix-ui/react-hover-card": "^1.1.10",
     "aos": "^2.3.4",
     "chrome-aws-lambda": "^10.1.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.475.0",
     "next": "15.0.3",
     "pdfjs-dist": "^3.4.120",
@@ -19,14 +22,15 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "swiper": "^11.1.15",
+    "tailwind-merge": "^3.2.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4",
     "@types/aos": "^3.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@tailwindcss/postcss": "^4",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
