--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@playwright/test": "^1.50.1",
+    "@radix-ui/react-dialog": "^1.1.10",
     "@radix-ui/react-hover-card": "^1.1.10",
     "aos": "^2.3.4",
     "chrome-aws-lambda": "^10.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.7.4",
     "lucide-react": "^0.475.0",
     "next": "15.0.3",
     "pdfjs-dist": "^3.4.120",
